--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "1.1.0",
   "author": "Szymon Pulut <szymon.pulut@gmail.com>",
   "dependencies": {
-    "@n8tb1t/use-scroll-position": "^1.0.43",
-    "body-scroll-lock": "^2.6.4",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "gatsby": "^4.4.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-manifest": "^4.4.0",
@@ -37,7 +37,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "gh-pages": "^2.2.0",
+    "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.5",
     "prettier": "^2.5.1"
