--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-transformer-remark": "^5.4.0",
     "gatsby-transformer-sharp": "^4.4.0",
-    "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-scroll": "^1.7.14"
+    "react-scroll": "^1.7.14",
+    "sass": "^1.45.2"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
