--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@n8tb1t/use-scroll-position": "^2.0.3",
     "body-scroll-lock": "^4.0.0-beta.0",
     "gatsby": "^4.4.0",
-    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
     "gatsby-plugin-offline": "^5.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
