--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "deploy": "gatsby build && gh-pages -d public -b master",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "lint": "eslint --ext .ts,.tsx src",
-    "start": "npm run develop",
+    "start": "yarn develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
