--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-scroll": "^1.7.14",
-    "sass": "^1.45.2"
+    "sass": "^1.45.2",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
@@ -40,7 +41,8 @@
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.5",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "standard-version": "^9.3.2"
   },
   "license": "MIT",
   "scripts": {
