--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "sass": "^1.45.2"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/node": "^17.0.6",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.5",
+    "@types/react-scroll": "^1.8.3",
     "eslint": "^8.6.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-node": "^4.0.0",
