--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "deploy": "gatsby build && gh-pages -d public -b master",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "lint": "eslint --ext .ts,.tsx src",
     "start": "yarn develop",
     "serve": "gatsby serve",
