--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "portfolio",
   "private": true,
-  "description": "My personal website and portfolio - Szymon Pulut (Web Developer)",
-  "version": "2.0.1",
+  "description": "My personal website and portfolio - Szymon Pulut - Frontend Software Engineer",
+  "version": "2.1.0",
   "author": "Szymon Pulut <szymon.pulut@gmail.com>",
   "dependencies": {
     "@n8tb1t/use-scroll-position": "^2.0.3",
