fix: ci/cd (#33)
* fix(eslint): add next config to ignores of eslint and prettier

* fix(eslint): remove unnecessary eslint extension

* fix(posts): add an empty posts directory to prevent building errors

* fix(typescript): add optional chaining

* fix(nextjs): remove unnecessary config

* fix(posts api): only parse .md files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,11 @@
 {
-  "extends": ["next/babel", "next/core-web-vitals"],
+  "extends": "next/core-web-vitals",
   "plugins": ["simple-import-sort"],
   "rules": {
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error"
   },
-
+  "ignorePatterns": ["next.config.js"],
   "overrides": [
     // Override "simple-import-sort" config
     {
