fix(eslint): add no unused vars rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,8 @@
               ["^.+\\.?(css)$"]
             ]
           }
-        ]
+        ],
+        "no-unused-vars": "error"
       }
     }
   ]
