--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --fix --max-warnings=0",
+    "lint": "next lint",
     "precommit": "lint-staged",
     "prepare": "husky install",
     "prettier": "prettier --write"
