--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "next": "13.4.10",
     "postcss": "8.4.26",
