--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "date-fns": "^2.30.0",
     "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
-    "next": "13.5.6",
+    "next": "^14.0.4",
     "next-plausible": "^3.12.0",
     "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "sass": "^1.63.6",
@@ -36,7 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
+    "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.0",
